[UI] fix line height issue for custom text spacing
closes #3367

--- a/src/clr-angular/layout/main-container/_variables.header.scss
+++ b/src/clr-angular/layout/main-container/_variables.header.scss
@@ -19,6 +19,7 @@ $clr-header-nav-hover-opacity: 1 !default;
 $clr-header-outline-offset: -0.208333rem !default;
 $clr-header-clarity-icons-size: 1rem !default;
 $clr-header-nav-text-horizontal-padding: 1rem !default;
+$clr-header-nav-text-vertical-padding: 0.75rem !default;
 $clr-header-2-bg-color: #485969 !default; // Hard coded because this color is not in the color palette. Its reserved for headers only
 $clr-header-3-bg-color: $clr-color-secondary-action-1000 !default;
 $clr-header-4-bg-color: $clr-color-action-700 !default;
